--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.14.0",
+    "@fortawesome/fontawesome-pro": "^5.15.1",
     "@glidejs/glide": "3.4.1",
+    "@laylazi/bootstrap-rtl": "^4.5.3-1",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
+    "bootstrap-v4-rtl": "^4.5.2-1",
     "choices.js": "9.0.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
