--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-github-button": "0.1.11",
     "react-google-maps": "9.4.5",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
-    "reactstrap": "8.5.1"
+    "react-scripts": "4.0.1",
+    "reactstrap": "8.5.1",
+    "axios": "^0.21.1",
+    "react-google-login": "^5.1.20"
   },
   "scripts": {
     "start": "react-scripts start",
