--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.13.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-excel-renderer": "^1.1.0",
     "react-github-button": "0.1.11",
     "react-google-login": "^5.1.20",
     "react-google-maps": "9.4.5",
