--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "argon-design-system-pro-react",
   "version": "1.0.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^5.15.1",
     "@glidejs/glide": "3.4.1",
@@ -10,12 +11,15 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
+    "@tinymce/tinymce-react": "^3.9.0",
     "axios": "^0.21.1",
     "bootstrap-v4-rtl": "^4.5.2-1",
     "choices.js": "9.0.1",
+    "env-cmd": "^10.1.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "headroom.js": "0.11.0",
+    "jquery": "^3.5.1",
     "moment": "2.27.0",
     "node-sass": "4.14.1",
     "nouislider": "14.6.0",
@@ -24,16 +28,20 @@
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
     "react-excel-renderer": "^1.1.0",
+    "react-facebook-login": "^4.1.1",
     "react-github-button": "0.1.11",
     "react-google-login": "^5.1.20",
     "react-google-maps": "9.4.5",
+    "react-paypal-button-v2": "^2.6.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
+    "react-signature-canvas": "^1.0.3",
     "reactstrap": "8.5.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "start:local": "env-cmd -f .env.local react-scripts start",
+    "build:dev": "env-cmd -f .env.development && react-scripts build && gulp licenses",
+    "build:prod": "env-cmd -f .env.production && react-scripts build && gulp licenses",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
