--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "scripts": {
     "start:local": "env-cmd -f .env.local react-scripts start",
-    "build:dev": "env-cmd -f .env.development && react-scripts build && gulp licenses",
-    "build:prod": "env-cmd -f .env.production && react-scripts build && gulp licenses",
+    "build:dev": "env-cmd -f .env.development react-scripts build && gulp licenses",
+    "build:prod": "env-cmd -f .env.production react-scripts build && gulp licenses",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
