--- a/.github/workflows/deploy_to_dev.yml
+++ b/.github/workflows/deploy_to_dev.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         npm config set "@fortawesome:registry" https://npm.fontawesome.com/
         npm config set "//npm.fontawesome.com/:_authToken" AD88D815-9F31-45AA-AC3E-185B3B872007
+        npm uninstall webpack
         npm install
     - name: build react app
       run: npm run build:dev
