--- a/.github/workflows/deploy_to_dev.yml
+++ b/.github/workflows/deploy_to_dev.yml
@@ -23,6 +23,7 @@ jobs:
         npm config set "@fortawesome:registry" https://npm.fontawesome.com/
         npm config set "//npm.fontawesome.com/:_authToken" AD88D815-9F31-45AA-AC3E-185B3B872007
         sudo npm uninstall -g webpack
+        rm -rf node_modules/ && rm -rf package-lock.json
         npm install
     - name: build react app
       run: npm run build:dev
