--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:3000
+REACT_APP_API_URL=http://78.47.196.136
 REACT_APP_GOOGLE_CLIENT_ID=846260690124-46sosrvga0r22u0ngq5oh2hiimmdmugo.apps.googleusercontent.com
 REACT_APP_FACEBOOK_APP_ID = 694178441232259
 SKIP_PREFLIGHT_CHECK=true
