--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-REACT_APP_API_URL=http://78.47.196.136
-REACT_APP_GOOGLE_CLIENT_ID=846260690124-46sosrvga0r22u0ngq5oh2hiimmdmugo.apps.googleusercontent.com
-REACT_APP_FACEBOOK_APP_ID = 694178441232259
+REACT_APP_API_URL=http://dev.nextsale.co.il
+REACT_APP_GOOGLE_CLIENT_ID=846260690124-9g3t8t983v1h4g1os52rtl7j0fnmnn9a.apps.googleusercontent.com
+REACT_APP_FACEBOOK_APP_ID=694178441232259
 SKIP_PREFLIGHT_CHECK=true
 CI=false
