--- a/.github/workflows/deploy_to_dev.yml
+++ b/.github/workflows/deploy_to_dev.yml
@@ -50,3 +50,8 @@ jobs:
           cp -r /var/www/html/nextsale/build/* /var/www/html/nextsale/
           sudo systemctl stop nginx
           sudo systemctl start nginx
+    - name: Bump version and push tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v5.6
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
