--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "headroom.js": "0.11.0",
+    "highcharts": "^9.2.2",
+    "highcharts-react-official": "^3.0.0",
     "jquery": "^3.5.1",
     "moment": "2.27.0",
     "node-sass": "4.14.1",
