--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-github-button": "0.1.11",
     "react-google-login": "^5.1.20",
     "react-google-maps": "9.4.5",
+    "react-number-format": "^4.7.3",
     "react-paypal-button-v2": "^2.6.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
